[package]
name = "scars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "file-server"
path = "src/cf/file_server.rs"

[dependencies]
anyhow = "1.0.81"
thiserror = "1.0.58"
prost = "0.12.4"
tonic = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"